log
Sat 11 Mar 2023 02:22:13 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:3: error: ‘asas’ undeclared (first use in this function)
   17 |   asas
      |   ^~~~
exercises.c:17:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:17:7: error: expected ‘;’ before ‘}’ token
   17 |   asas
      |       ^
      |       ;
   18 | 
   19 | }
      | ~      
Compilation failed
24ad2f7
Sat 11 Mar 2023 02:23:36 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   17 |   int aux=*b
      |           ~~
      |           |
      |           int
   18 |   *b=*a
      |   ^
exercises.c:19:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   18 |   *b=*a
      |      ~~
      |      |
      |      int
   19 |   *a=aux
      |   ^
exercises.c:21:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   21 | }
      | ^
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
231aacc
Sat 11 Mar 2023 02:23:58 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   17 |   int *aux=*b
      |            ~~
      |            |
      |            int
   18 |   *b=*a
      |   ^
exercises.c:19:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   18 |   *b=*a
      |      ~~
      |      |
      |      int
   19 |   *a=aux
      |   ^
exercises.c:21:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   21 | }
      | ^
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0ed7c4c
Sat 11 Mar 2023 02:24:16 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   17 |   int *aux=*b
      |            ~~
      |            |
      |            int
   18 |   *b=*a
      |   ^
exercises.c:19:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   18 |   *b=*a
      |      ~~
      |      |
      |      int
   19 |   *a=*aux
      |   ^
exercises.c:21:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   21 | }
      | ^
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
bea5733
Sat 11 Mar 2023 02:25:16 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:11: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   17 |   int aux=b
      |           ^
exercises.c:18:3: error: expected ‘,’ or ‘;’ before ‘b’
   18 |   b=a
      |   ^
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
In file included from test.c:5:
exercises.c:17:7: error: unused variable ‘aux’ [-Werror=unused-variable]
   17 |   int aux=b
      |       ^~~
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
5d3eb36
Sat 11 Mar 2023 02:25:37 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:11: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   17 |   int aux=b;
      |           ^
exercises.c:19:4: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   19 |   a=aux;
      |    ^
cc1: all warnings being treated as errors
Compilation failed
c5cc544
Sat 11 Mar 2023 02:25:59 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
292e50f
Sat 11 Mar 2023 02:38:15 AM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |       if((*a[i]<a[i-1])&&(i>0))
      |           ^~~~~
exercises.c:37:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   37 |       if((*a[i]>a[i-1])&&(i>0))
      |           ^~~~~
Compilation failed
369c427
Sat 11 Mar 2023 02:38:38 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |       if((*a[i]<*a[i-1])&&(i>0))
      |           ^~~~~
exercises.c:33:17: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |       if((*a[i]<*a[i-1])&&(i>0))
      |                 ^~~~~~~
exercises.c:37:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   37 |       if((*a[i]>*a[i-1])&&(i>0))
      |           ^~~~~
exercises.c:37:17: error: invalid type argument of unary ‘*’ (have ‘int’)
   37 |       if((*a[i]>*a[i-1])&&(i>0))
      |                 ^~~~~~~
Compilation failed
75d3109
Sat 11 Mar 2023 02:39:39 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
968bfa5
Sat 11 Mar 2023 02:40:17 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
6b24861
Sat 11 Mar 2023 02:41:40 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
3185624
Sat 11 Mar 2023 02:42:06 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a41bbe8
Sat 11 Mar 2023 02:43:22 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
8c97cc7
